# Pseudo-Paradox

./: .gitignore  README.md
core-engine/: CMakeLists.txt
core-engine/include/: eigen_solver.hpp
core-engine/src/: bindings.cpp  eigen_solver.cpp  noncommutative.cpp
frontend/: index.html  package-lock.json  package.json  world
frontend/src/: main.js
frontend/src/api/: websocket.js
include/: eigen_solver.hpp  noncommutative.hpp:
server/: main.py
~/: Pseudo-Paradox
